--- a/core/templates/authenticated/settings/base.html
+++ b/core/templates/authenticated/settings/base.html
@@ -9,7 +9,7 @@
 {% block authenticated_body %}
     <h5 class="well row settingHead header5">Account Settings</h5>
 
-    <div class='row'>
+    <div class='row' id="settings_body">
         {% include "authenticated/settings/common_account.html" with settings_common=vm.authenticated_body.settings_common only %}
         {% block custom_data %}{% endblock custom_data %}
         {% include "authenticated/settings/password_change.html" only %}
