--- a/core/templates/authenticated/settings/parent_childinfo.html
+++ b/core/templates/authenticated/settings/parent_childinfo.html
@@ -1,5 +1,5 @@
 <div class='parent_child'>
-    <div>Name: {{ child_info.name }}</div>
-    <div>Class: {{ child_info.classroom }}</div>
-    <div>ClassTeacher: {{ child_info.classteacher }}</div>
+    <div><label>Name :</label>{{ child_info.name }}</div>
+    <div><label>Class :</label>{{ child_info.classroom }}</div>
+    <div><label>ClassTeacher :</label>{{ child_info.classteacher }}</div>
 </div> 
