--- a/core/static/css/sidebar.css
+++ b/core/static/css/sidebar.css
@@ -23,10 +23,7 @@ hr{
     border-color: #000;
 }
 
-.parent_child_info_header{
-    font-size: 18px;
-}
-
 .parent_child_info div{
     margin-top: 10px;
+    font-size: large;
 }
