--- a/core/templates/authenticated/home/student.html
+++ b/core/templates/authenticated/home/student.html
@@ -5,7 +5,7 @@
 {% block home_body %}
     <!-- Performance Div -->
     <div class='row'>
-        {% include "authenticated/widgets/student_performance.html" with name=vm.sidebar.userinfo.name only %}
+        {% include "authenticated/widgets/student_performance.html" only %}
     </div>
 
 {% endblock home_body %}
