--- a/core/templates/authenticated/settings/common_account.html
+++ b/core/templates/authenticated/settings/common_account.html
@@ -1,4 +1,4 @@
-<div class="settings_info"><h6 class="header header6">Name : </h6> {{ settings_common.user_label }} </div>
-<div class="settings_info"><h6 class="header header6">User ID : </h6> {{ settings_common.username }}</div>
-<div class="settings_info"><h6 class="header header6">Email ID : </h6> {{ settings_common.email }} </div> 
-<div class="settings_info"><h6 class="header header6">School : </h6>{{ settings_common.school }}</div>
+<div><h6 class="header header6">Name : </h6> {{ settings_common.user_label }} </div>
+<div><h6 class="header header6">User ID : </h6> {{ settings_common.username }}</div>
+<div><h6 class="header header6">Email ID : </h6> {{ settings_common.email }} </div>
+<div><h6 class="header header6">School : </h6>{{ settings_common.school }}</div>
