--- a/core/templates/authenticated/settings/parent.html
+++ b/core/templates/authenticated/settings/parent.html
@@ -1,6 +1,7 @@
 {% extends "authenticated/settings/base.html" %}
 {% block custom_data %}
     <h6 class='header header6'> Children: </h6>
+    <div class="margin-left-30 margin-top-neg-30">
     <ul id='parent_child_info_list'>
         {% for child_info in vm.authenticated_body.children %}
             <li>
@@ -10,4 +11,5 @@
             None registered
         {% endfor %}
     </ul>
+    </div>
 {% endblock custom_data %}
