--- a/core/templates/authenticated/widgets/student_performance.html
+++ b/core/templates/authenticated/widgets/student_performance.html
@@ -1,5 +1,5 @@
 <div id="student_performance" class='row'>
-    {% include "authenticated/charts/student_performance_breakdown.html" with name=name only %}
+    {% include "authenticated/charts/student_performance_breakdown.html" only %}
     <hr style="border-color:#d6d6d6;">
 </div>
 
