--- a/core/templates/authenticated/charts/chart_loader.html
+++ b/core/templates/authenticated/charts/chart_loader.html
@@ -1,3 +1,3 @@
 {% load staticfiles %}
-<img class='loadingimage1' src="{% static 'img/page-loader1.gif' %}">
-<h3 class='loadingtext'> Loading ... </h3>
+<img class='loadingimage' src="{% static 'img/page-loader.gif' %}">
+<h3 class='loadingtext'>Loading...</h3>
