--- a/core/templates/authenticated/charts/subjectroom_performance_breakdown.html
+++ b/core/templates/authenticated/charts/subjectroom_performance_breakdown.html
@@ -5,7 +5,7 @@
     </span>
     <div id='subjectroom_performance_breakdown'>
         <div>
-            <ul id='subjectroombar' class="nav nav-tabs">
+            <ul id='subjectroombar' class="subjectroombar nav nav-tabs">
             </ul>
         </div>
         <div id="subjectroombargraph">
