--- a/core/templates/authenticated/charts/parent_child_performance.html
+++ b/core/templates/authenticated/charts/parent_child_performance.html
@@ -1,14 +1,13 @@
 <div id="student_performance_{{ id }}" class='row'>
-    <h4 class="header header4">{{ name }}&#39;s Performance</h4>
-    <span>
-        {% include 'authenticated/widgets/help_tip.html' with content="This is your Child's Performance Breakdown. You can check your child's performance in each subject by clicking on the specified tab and the overall tab to see your child's performance in all subjects. You can further click on the bars of each graph. Click on the 'Student Performance' bar to view your child's submission for each assignment and click on the 'Class Average' bar to see the Assignment performance distribution graph." only %}
-    </span>
-    <div id='student_performance_breakdown_{{ id }}'>
+    <div id='student_performance_breakdown_{{ id }}' class="chart-container">
         <div>
-            <ul id='subjectbar_{{id}}' class="nav nav-tabs">
+            <ul id='subjectbar_{{id}}' class="subjectbar nav nav-tabs">
                 <li id="all_{{ id }}" class='active'><a title='View overall performance across all subjects'>Overall</a>
                 </li>
             </ul>
+            <span>
+                {% include 'authenticated/widgets/help_tip.html' with flipped="true" content="This is your Child's Performance Breakdown. You can check your child's performance in each subject by clicking on the specified tab and the overall tab to see your child's performance in all subjects. You can further click on the bars of each graph. Click on the 'Student Performance' bar to view your child's submission for each assignment and click on the 'Class Average' bar to see the Assignment performance distribution graph." only %}
+            </span>
         </div>
         <div id="subject_performance_{{id}}">
             {% include "authenticated/charts/parent_child_performance_report.html" with id=id only %}
