--- a/core/templates/authenticated/charts/student_performance_popup.html
+++ b/core/templates/authenticated/charts/student_performance_popup.html
@@ -5,7 +5,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title"> Student Performance breakdown</h4>
+          <h4 class="modal-title">Student Performance Breakdown</h4>
         <span>
             {% include 'authenticated/widgets/help_tip.html' with content="This is the Student's Performance Breakdown. You can check the student's performance in each subject by clicking on the specified tab and the overall tab to see the student's performance across all subjects. You can further click on the bars of each graph. Click on the 'Student Performance' bar to view the student's submission for each assignment and click on the 'Class Average' bar to see the Assignment performance distribution graph." only %}
         </span>
@@ -13,7 +13,7 @@
       <div class="modal-body">
           <div id='student_performance_breakdown_popup'>
                 <div>
-                    <ul id='subjectbar' class="popup_bar nav nav-tabs">
+                    <ul id='subjectbar' class="subjectbar popup_bar nav nav-tabs">
                         <li id="all" class="active"><a title='View overall performance across all subjects'>Overall</a></li>
                     </ul>
                 </div>
