--- a/core/templates/authenticated/charts/student_performance_report.html
+++ b/core/templates/authenticated/charts/student_performance_report.html
@@ -1,5 +1,5 @@
 <div id="student_performance_report">
-    <div id="student_performance_bargraph" class='chart no-border'>
+    <div id="student_performance_bargraph" class='chart'>
         {% include "authenticated/charts/chart_loader.html" only %}
     </div>
 </div>
