--- a/core/templates/authenticated/charts/teacher_performance_breakdown_popup.html
+++ b/core/templates/authenticated/charts/teacher_performance_breakdown_popup.html
@@ -15,7 +15,7 @@
           <div class='row'>
     <div id='subjectroom_performance_breakdown_popup'>
         <div>
-            <ul id='subjectroombar' class="popup_bar nav nav-tabs">
+            <ul id='subjectroombar' class="subjectroombar popup_bar nav nav-tabs">
             </ul>
         </div>
         <div id="subjectroombargraph"></div>
