--- a/core/templates/authenticated/home/parent.html
+++ b/core/templates/authenticated/home/parent.html
@@ -2,11 +2,15 @@
 
 {% load staticfiles %}
 
-{% block home_body %} 
-     <div id="parent_content" class='hidden'></div>
+{% block home_css %}
+    <link rel="stylesheet" href="{% static "css/home/parent.css" %}" type="text/css"/>
+{% endblock home_css %}
+
+{% block home_body %}
+    <div id="parent-home-body">
     {% for child_home_body in vm.authenticated_body.child_home_bodies %}
-        <div class='row'>
-            <h3 class="header header3">{{ child_home_body.name }} : {{child_home_body.classroom}}</h3>
+        <div class='row parent-child-container'>
+            <h3 class="parent-child-header header header3">{{ child_home_body.name }} : {{child_home_body.classroom}}</h3>
             <span class='hidden parent_child_id'>{{child_home_body.child_id}}</span>
 
             {% include "authenticated/charts/parent_child_performance.html" with name=child_home_body.name id=child_home_body.child_id only %}
@@ -18,7 +22,8 @@
         </div> 
 
     {% endfor %}
-   
+
+    </div>
 {% endblock home_body %}
 
 {% block home_js %}
