--- a/core/templates/authenticated/base.html
+++ b/core/templates/authenticated/base.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="{% static "js/dataTables.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/moment.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/datetime-moment.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/constants.js" %}"></script>
     <script type="text/javascript" src="{% static "js/authenticated_base.js" %}"></script>
     <script type="text/javascript" src="{% static "js/sidebar.js" %}"></script>
     <script type="text/javascript" src="{% static "js/ajax/announcements.js" %}"></script>
