--- a/core/templates/authenticated/charts/parent_child_performance_report.html
+++ b/core/templates/authenticated/charts/parent_child_performance_report.html
@@ -1,5 +1,5 @@
 <div id="student_performance_report_{{ id }}">
-    <div id="student_performance_bargraph_{{ id }}" class='chart'>
+    <div id="student_performance_bargraph_{{ id }}" class='chart chart_{{ id }}'>
         {% include "authenticated/charts/chart_loader.html" only %}
     </div>
 </div>
