--- a/core/templates/authenticated/charts/student_performance_popup.html
+++ b/core/templates/authenticated/charts/student_performance_popup.html
@@ -13,12 +13,12 @@
       <div class="modal-body">
           <div id='student_performance_breakdown_popup'>
                 <div>
-                    <ul id='subjectbar' class="subjectbar popup_bar nav nav-tabs">
+                    <ul id='subjectbar' class="subjectbar nav nav-tabs">
                         <li id="all" class="active"><a title='View overall performance across all subjects'>Overall</a></li>
                     </ul>
                 </div>
                 <div id="subject_performance">
-                    {% include "authenticated/charts/student_performance_report.html" only %}
+                    {% include "authenticated/charts/student_performance_report.html" with context_class="popup_chart" only %}
                 </div>
             </div>
       </div>
