--- a/core/templates/authenticated/widgets/classrooms_table.html
+++ b/core/templates/authenticated/widgets/classrooms_table.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="row scroll">
+    <div class="row">
         <div id="classrooms_table" class="row">
             <div id="classrooms_table_header" class="row">
                 <div class="class col-md-4 col-sm-4 col-xs-4">Class</div>
