--- a/core/templates/authenticated/home/admin.html
+++ b/core/templates/authenticated/home/admin.html
@@ -8,7 +8,9 @@
 
 {% block home_body %}
     <div class='row'>
-        {% include "authenticated/widgets/announcement_create.html" only %}
+        <div id="ribbon">
+            {% include "authenticated/widgets/announcement_create.html" only %}
+        </div>
         <!-- Teachers Div -->
         {% include "authenticated/widgets/classrooms_table.html" with classrooms_table=vm.authenticated_body.classrooms_table only %}
         {% include "authenticated/widgets/../charts/standard_assignment_performance_popup.html" only %}
@@ -18,6 +20,8 @@
 
 
 {% block home_js %}
+    <script type="text/javascript" src="{% static 'js/home/admin.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/charts/classrooms_table_links.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/charts/subjectroom_performance_breakdown.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/charts/subjectroom_assignment_performance.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/charts/standard_assignment_performance.js' %}"></script> 
