--- a/core/templates/authenticated/home/base.html
+++ b/core/templates/authenticated/home/base.html
@@ -16,5 +16,5 @@
 {% block authenticated_base_js %}
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     {% block home_js %}{% endblock home_js %}
-    <script type="text/javascript" src="{% static 'js/charts/graph_lib.js' %}"></script> 
+    <script type="text/javascript" src="{% static 'js/charts/common.js' %}"></script>
 {% endblock authenticated_base_js %}
