--- a/core/templates/authenticated/widgets/assignment_create.html
+++ b/core/templates/authenticated/widgets/assignment_create.html
@@ -1,3 +1,3 @@
-<a title="Click here to create a new homework assignment" class="no-decoration" href="{% url 'assignment' %}">
-    <button class="btn hwcentral_action_button">Assign HomeWork</button>
-</a>
+<div class="ribbon-button">
+    <a title="Click here to create a new homework assignment" class="no-decoration hwcentral_action_button" href="{% url 'assignment' %}">Assign HomeWork</a>
+</div>
