--- a/core/templates/authenticated/subject_id/student.html
+++ b/core/templates/authenticated/subject_id/student.html
@@ -4,7 +4,7 @@
 
 {% block subjectroom_body %}
 <div class='row'>
-    {% include "authenticated/widgets/../charts/student_subjectroom_performance.html" only %}
+    {% include "authenticated/charts/student_subjectroom_performance.html" only %}
 </div>
 {% endblock subjectroom_body %}
 
