--- a/core/templates/authenticated/home/teacher.html
+++ b/core/templates/authenticated/home/teacher.html
@@ -13,7 +13,7 @@
             {% include "authenticated/widgets/announcement_create.html" only %}
         </div>
         {% include "authenticated/charts/subjectroom_performance_breakdown.html" only %}
-        {% include "authenticated/widgets/../charts/standard_assignment_performance_popup.html" only %}
+        {% include "authenticated/charts/standard_assignment_performance_popup.html" only %}
         
     </div>
 {% endblock home_body %}
