--- a/core/templates/authenticated/subject_id/teacher.html
+++ b/core/templates/authenticated/subject_id/teacher.html
@@ -4,9 +4,9 @@
 
 {% block subjectroom_body %}
     <div class='row'>
-        {% include "authenticated/widgets/../charts/teacher_subjectroom_performance.html" only %}
-        {% include "authenticated/widgets/../charts/standard_assignment_performance_popup.html" only %}
-        {% include "authenticated/widgets/../charts/student_subjectroom_performance_popup.html" only %}
+        {% include "authenticated/charts/teacher_subjectroom_performance.html" only %}
+        {% include "authenticated/charts/standard_assignment_performance_popup.html" only %}
+        {% include "authenticated/charts/student_subjectroom_performance_popup.html" only %}
     </div>
     <div class='row margin-top-20'>
         {% include "authenticated/reportcard/subjectroom.html" with reportcard=vm.authenticated_body.reportcard only %}
