--- a/core/static/css/authenticated/help_tip.css
+++ b/core/static/css/authenticated/help_tip.css
@@ -1,6 +1,6 @@
 .help_tip{
     text-align: center;
-    background-color: #BCDBEA;
+    background-color: #323232;
     border-radius: 50%;
     font-size: 14px;
     height: 20px; /* adding height and width to prevent warping */
