--- a/core/templates/authenticated/announcement.html
+++ b/core/templates/authenticated/announcement.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% block title %} Create Annoucement {% endblock title %}
 {% block authenticated_base_css %}
-    <link rel="stylesheet" href="{% static "css/announcement.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/authenticated/announcement.css" %}" type="text/css"/>
 {% endblock authenticated_base_css %}
 
 {% block authenticated_body %}
