--- a/core/templates/authenticated/base.html
+++ b/core/templates/authenticated/base.html
@@ -6,11 +6,11 @@
 {% load staticfiles %}
 
 {% block base_css %}
-    <link rel="stylesheet" href="{% static "css/authenticated_base.css" %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static "css/help_tip.css" %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static "css/sidebar.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/authenticated/base.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/authenticated/help_tip.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/authenticated/sidebar.css" %}" type="text/css"/>
     <link rel="stylesheet" href="{% static "css/dataTables.min.css" %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static "css/userinfo.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/authenticated/userinfo.css" %}" type="text/css"/>
     {# So that each extending template can include its own stylesheet #}
     {% block authenticated_base_css %}{% endblock authenticated_base_css %}
 {% endblock base_css %}
@@ -19,9 +19,10 @@
     <script type="text/javascript" src="{% static "js/dataTables.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/moment.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/datetime-moment.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/constants.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/authenticated_base.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/sidebar.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/authenticated/constants.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/authenticated/helpers.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/authenticated/base.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/authenticated/sidebar.js" %}"></script>
     <script type="text/javascript" src="{% static "js/ajax/announcements.js" %}"></script>
     {% block authenticated_base_js %}{% endblock authenticated_base_js %}
 {% endblock base_js %}
