--- a/core/templates/authenticated/home/base.html
+++ b/core/templates/authenticated/home/base.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 {% block title %} Home {% endblock title %}
 {% block authenticated_base_css %}
-    <link rel="stylesheet" href="{% static "css/home/base.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/authenticated/home/base.css" %}" type="text/css"/>
     {% block home_css %} {% endblock home_css %}
 {% endblock authenticated_base_css %}
 
