--- a/core/templates/authenticated/settings/base.html
+++ b/core/templates/authenticated/settings/base.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 {% block title %} Settings {% endblock title %}
 {% block authenticated_base_css %}
-    <link rel="stylesheet" href="{% static "css/settings.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/authenticated/settings.css" %}" type="text/css"/>
 {% endblock authenticated_base_css %}
 
 {% block authenticated_body %}
