--- a/core/templates/authenticated/sidebar/ticker.html
+++ b/core/templates/authenticated/sidebar/ticker.html
@@ -1,6 +1,8 @@
 <div class="ticker_box">
     <h6 id="ticker_header" class='sidebarheader header header6'>{{ ticker.label }}</h6>
     <div id="ticker">
+        {% block ticker_content %}
         {% include 'authenticated/widgets/link.html' with title='View active assignments' link=ticker.link only %}
+        {% endblock ticker_content %}
     </div>
 </div>
