--- a/core/templates/authenticated/submission_id/base.html
+++ b/core/templates/authenticated/submission_id/base.html
@@ -6,18 +6,19 @@
 {% block title %} Assignment {% endblock title %}
 
 {% block authenticated_base_js %}
-    <script type="text/javascript" src="{% static "js/img_reloader.js" %}"></script>
+    {#  img reloader before mathjax to be safe because mathjax is large may take time to load #}
+    <script type="text/javascript" src="{% static "js/authenticated/submission_id/img_reloader.js" %}"></script>
     {# skipping protocol so that both http and https work and using most inclusive config file #}
     <script type="text/javascript"
             src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script type="text/javascript" src="{% static 'js/submission_id.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/charm.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/authenticated/submission_id/base.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/authenticated/submission_id/charm.js' %}"></script>
     {% block submission_id_js %}{% endblock submission_id_js %}
 {% endblock authenticated_base_js %}
 
 {% block authenticated_base_css %}
-    <link rel="stylesheet" href="{% static "css/submission_id.css" %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static "css/charm.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/authenticated/submission_id/base.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/authenticated/submission_id/charm.css" %}" type="text/css"/>
     {% block submission_id_css %}{% endblock submission_id_css %}
 {% endblock authenticated_base_css %}
 
