--- a/hwcentral/templates/footer.html
+++ b/hwcentral/templates/footer.html
@@ -3,7 +3,7 @@
 <div class="container-fluid">
 	<div class="navbar-header">
         <a title="Return to home page" class='indented_body_right navbar-brand' href="{% url 'index' %}">&copy;
-            HWCentral 2015</a>
+            HomeWork Central 2015</a>
 	</div>
 
     <ul class='navbar-right nav navbar-nav footer'>
