--- a/core/static/css/authenticated/assignment.css
+++ b/core/static/css/authenticated/assignment.css
@@ -31,12 +31,12 @@
 
 #submit_button{
     margin: 0px;
-    margin-left: 20px;
+    margin-left: 5px;
     line-height: normal;
 }
 
 #aql_description {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     font-size:20px;
 }
 
@@ -47,9 +47,14 @@
 
 #all-standards-button {
     background-color: #C63632;
+    margin-left: 5px;
 }
 
 #same-standard-button {
     background-color: #ED9B27;
+}
+
+#preview_link {
+    background-color: #E37E01;
 }
 
