--- a/core/static/css/authenticated/home/parent.css
+++ b/core/static/css/authenticated/home/parent.css
@@ -7,7 +7,7 @@
 }
 
 #parent-home-body > .parent-child-container {
-    border-top: 2px solid rgb(46,46,46);
+    border-top: 2px solid rgb(124, 124, 124);
     margin-top: 50px;
     padding-top: 10px;
 }
