--- a/core/templates/authenticated/home/parent.html
+++ b/core/templates/authenticated/home/parent.html
@@ -3,22 +3,17 @@
 {% load staticfiles %}
 
 {% block home_css %}
-    <link rel="stylesheet" href="{% static "css/home/parent.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/authenticated/home/parent.css" %}" type="text/css"/>
 {% endblock home_css %}
 
 {% block home_body %}
     <div id="parent-home-body">
     {% for child_home_body in vm.authenticated_body.child_home_bodies %}
         <div class='row parent-child-container'>
-            <h3 class="parent-child-header header header3">{{ child_home_body.name }} : {{child_home_body.classroom}}</h3>
+            <h3 class="parent-child-header header header3">{{ child_home_body.name }}</h3>
             <span class='hidden parent_child_id'>{{child_home_body.child_id}}</span>
 
             {% include "authenticated/charts/parent_child_performance.html" with name=child_home_body.name id=child_home_body.child_id only %}
-
-            <!-- Assignment Div -->
-            <a name="active_assignment_table_{{child_home_body.username}}"></a>
-            {% include "authenticated/assignments_table/active_student.html" with assignments=child_home_body.active_assignments only %}
-            {% include "authenticated/assignments_table/corrected_student.html" with assignments=child_home_body.corrected_assignments only %}
         </div> 
 
     {% endfor %}
