--- a/core/templates/authenticated/subject_id/base.html
+++ b/core/templates/authenticated/subject_id/base.html
@@ -3,17 +3,20 @@
 {% load staticfiles %}
 {% block title %} {{ vm.authenticated_body.subjectroom_label }} {% endblock title %}
 {% block authenticated_base_css %}
-    <link rel="stylesheet" href="{% static "css/subject_id.css" %}" type="text/css"/>
     {% block subject_id_css %} {% endblock subject_id_css %}
 {% endblock authenticated_base_css %}
 
 
 {% block authenticated_body %}
-    <h5 class="topheader row well header5">{{ vm.authenticated_body.subjectroom_label }} : {{ vm.authenticated_body.subjectteacher_label }}{% block header_context %}{% endblock header_context %}</h5>
+    <h5 class="topheader row well header5">
+        {% block header_context %}{% endblock header_context %}{{ vm.authenticated_body.subjectroom_label }}
+        : {{ vm.authenticated_body.subjectteacher_label }}</h5>
     {% block subjectroom_body %}{% endblock subjectroom_body %}
     {% include "authenticated/charts/subjectroom_assignment_performance_popup.html" only %}
     <div id='subjectroom_id' class='hidden'>{{ vm.authenticated_body.subjectroom_id }}</div>
-    {% block assignments %}{% endblock assignments %}
+    <div class="assignment-tables-container">
+        {% block assignments %}{% endblock assignments %}
+    </div>
 {% endblock authenticated_body %}
 
 
