--- a/hwcentral/templates/base.html
+++ b/hwcentral/templates/base.html
@@ -7,15 +7,12 @@
     <!-- Styles -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'css/header.css' %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static 'css/jquery-ui.min.css' %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static 'css/jquery-ui.theme.min.css' %}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'css/chosen/chosen.min.css' %}" type="text/css"/>
     {% block base_css %}{% endblock base_css %}
 {% endblock root_css %}
 
 {% block root_js %}
-    <script type="text/javascript" src="{% static 'js/jquery-ui.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/chosen.jquery.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/chosen.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/base.js' %}"></script>
 
     {% block base_js %}{% endblock base_js %}
