--- a/sphinx/templates/modules/numerical.html
+++ b/sphinx/templates/modules/numerical.html
@@ -1,2 +1,3 @@
 Correct Answer: <input type="text" id="correct_ans" class="longtext"><br>
 Tolerance: <input type="number" id="tolerance_ans"><br>
+Unit: <input type="text" id="unit_ans"><br>
