--- a/sphinx/templates/modules/range.html
+++ b/sphinx/templates/modules/range.html
@@ -1,3 +1,3 @@
-<p>Enter the Range to Include. Eg:1-20: <input type="text" name="var_range"></p>
+<p>Enter the Range to Include. Eg:15 or -20,20: <input type="text" name="var_range"></p>
 <p>Enter the Decimal Step. Eg: 2 would mean a step of 0.01 <input type="number" name="var_decimal"></p>
-<p>Enter the Range to Exclude : <input type="text" name="var_exclude"></p>
+<p>Enter the Range to Exclude. Eg:0 or -5,5 : <input type="text" name="var_exclude"></p>
