made mcsaq incorrect length variable for sphinx

--- a/sphinx/templates/app.html
+++ b/sphinx/templates/app.html
@@ -98,7 +98,7 @@
 <div id="modules-container">
     {% include 'module_loader.html' with module_name='fraction' only %}
     {% include 'module_loader.html' with module_name='mcmaq' only %}
-    {% include 'module_loader.html' with module_name='mcmaq_subpart' only %}
+    {% include 'module_loader.html' with module_name='mcqoption' only %}
     {% include 'module_loader.html' with module_name='mcsaq' only %}
     {% include 'module_loader.html' with module_name='numerical' only %}
     {% include 'module_loader.html' with module_name='options' only %}
