--- a/sphinx/templates/modules/mcsaq.html
+++ b/sphinx/templates/modules/mcsaq.html
@@ -5,39 +5,25 @@
 </select>
 <br>
 <h3>Correct Answer</h3>
-<div class="subDiv">
-    Enter Text: <input type="text" id="correct_text" class="longtext"><br>
-    Image Name (optional): <input type="text" id="correct_img">
+<div id="MCSAQcorrect" class="subDiv">
+    {% include 'modules/mcqoption.html' %}
 </div>
 <hr>
 <h3>Incorrect Answers</h3>
 
-<table class="MCSAQtable">
-    <tr>
-        <td>
-            <h3>1</h3>
-        </td>
-        <td>
-            Enter Text: <input type="text" id="incorrect_text1" class="longtext"><br>
-            Image Name (optional): <input type="text" id="incorrect_img1"><br>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <h3>2</h3>
-        </td>
-        <td>
-            Enter Text: <input type="text" id="incorrect_text2" class="longtext"><br>
-            Image Name (optional): <input type="text" id="incorrect_img2"><br>
-        </td>
-    </tr>
-    <tr>
-        <td class="lasttd">
-            <h3>3</h3>
-        </td>
-        <td class="lasttd">
-            Enter Text: <input type="text" id="incorrect_text3" class="longtext"><br>
-            Image Name (optional): <input type="text" id="incorrect_img3"><br>
-        </td>
-    </tr>
-</table>
+<select id="MCSAQincorrectselect" onChange="MCSAQincorrect(this.value)">
+    <option value="0">Select Number of Incorrect Answers</option>
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+    <option value="5">5</option>
+    <option value="6">6</option>
+    <option value="7">7</option>
+    <option value="8">8</option>
+    <option value="9">9</option>
+    <option value="10">10</option>
+</select>
+<div id="MCSAQincorrect">
+
+</div>
